object creation and property added

--- a/Type/Primitive.html
+++ b/Type/Primitive.html
@@ -1,4 +1,8 @@
-var customerName = "John";
+<!DOCTYPE html>
+<html lang="en">
+<head>  
+    <script>
+        var customerName = "John";
 var accountBalance = 20000;
 var isValid = true;
 
@@ -7,7 +11,7 @@ var x = 123;
 var y=x;
 y=465;
 var s = "123";
-var s1 ="You are the creator of your own destiny"
+var s1 ="Hello"
 
 document.write(s1.toLowerCase()+ "<br/>")
 document.write(s1.substring(5,10)+ "<br/>")
@@ -21,3 +25,10 @@ document.write(typeof x + "<br/>")
 document.write(y + "<br/>")
 document.write((x==s)+ "<br/>");//true
 document.write((x===s)+ "<br/>");//false
+
+    </script>
+</head>
+<body>
+    
+</body>
+</html>
