Cleaning up the memory

--- a/Type/Reference.html
+++ b/Type/Reference.html
@@ -10,6 +10,10 @@
     //added property
     obj1.myProperty = "Hello";
     document.write(obj2.myProperty);
+
+    //cleaning up memory
+    obj1 = null;
+    obj2 == null;
     </script>
 </head>
 <body>
