--- a/Type/Reference.html
+++ b/Type/Reference.html
@@ -14,6 +14,12 @@
     //cleaning up memory
     obj1 = null;
     obj2 == null;
+
+    var products = new Array();
+    var date = new Date();
+    var error = new Error("Something went wrong");
+    var myFunc = new Function("document.write('hello')");
+    var regEx = new RegExp("\\d+");
     </script>
 </head>
 <body>
