--- a/Type/ReferenceLiterals.html
+++ b/Type/ReferenceLiterals.html
@@ -8,6 +8,12 @@
             "score" : 80
         }
         document.write(student.name);
+
+        var studentNames = ["John", " Bobs ", "Harry"];
+        var sn = new Array("Johnathon","Bob","Harry");
+
+        document.write(studentNames[0]);
+        document.write(sn[0]);
     </script>
 </head>
 <body>
