--- a/Type/ReferenceLiterals.html
+++ b/Type/ReferenceLiterals.html
@@ -14,6 +14,12 @@
 
         document.write(studentNames[0]);
         document.write(sn[0]);
+
+        function hello(name){
+            return "hello" + name;
+        }
+
+        var myFunc = new Function("name","return 'hello'+name")
     </script>
 </head>
 <body>
