--- a/Type/WrapperType.html
+++ b/Type/WrapperType.html
@@ -8,6 +8,11 @@
 
      document.write(s);
 
+     s.Category = "Inspiring";
+     //It will print undefined
+     document.write(s.Category);
+
+
     </script>
 </head>
 <body>
