--- a/Functions/ObjectMethod.html
+++ b/Functions/ObjectMethod.html
@@ -8,8 +8,8 @@
       id:1,
       name:"Bob",
       display:function(){
-          document.write(student.id+"<br/>");
-          document.write(student.name);
+          document.write(this.id+"<br/>");
+          document.write(this.name);
       }
   };
 student.display();
