--- a/Objects/ObjectProperties.html
+++ b/Objects/ObjectProperties.html
@@ -6,11 +6,12 @@
   var course1 ={
       name: "Java script fundamental"
   };
-  var course2 =  new object();
+  var course2 =  new Object();
   course2.name = "React js";
   course1.name = "End to end java project";
   course1.description = "Master java project development";
 
+console.log("name" in course1);
     </script>
 </head>
 <body>
