has own property method

--- a/Objects/ObjectProperties.html
+++ b/Objects/ObjectProperties.html
@@ -12,6 +12,9 @@
   course1.description = "Master java project development";
 
 console.log("name" in course1);
+console.log("toString" in course1);
+console.log(course1.hasOwnProperty("toString"));
+
     </script>
 </head>
 <body>
