Object Property attribute (configurable)

--- a/Objects/PropertyAttribute.html
+++ b/Objects/PropertyAttribute.html
@@ -15,6 +15,17 @@ Object.defineProperty(creditCard,"name",
 console.log("name" in creditCard);
 console.log(creditCard.propertyIsEnumerable("name"));
 
+
+Object.defineProperty(creditCard,"name",
+{
+    configurable:false
+}
+);
+
+delete creditCard.name;
+console.log("name" in creditCard);
+console.log(creditCard.name);
+
     </script>
 </head>
 <body>
